--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    color: white;
+    color: black;
     font-family: 'Trebuchet MS';
     font-weight: bold;
     font-size: 2rem;
