--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,6 @@
 
 }
 
-@media (max-width: 750px) {
-    .In-Your-Face-content {
-        font-size: 1.5rem;
-        padding: 15vh 8vw;
-    }
-}
-
 .In-Your-Face-content {
     position: relative;
     z-index: 1;
@@ -26,4 +19,22 @@
     font-weight: bold;
     font-size: 2rem;
     padding: 20vh 10vw;
+}
+
+.bottom-page-info {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    font-family: 'Trebuchet MS';
+    Color: black;
+    font-weight: lighter;
+    font-size: 4rem;
+    padding: 20vh 10ww;
+}
+
+@media (max-width: 750px) {
+    .In-Your-Face-content {
+        font-size: 1.5rem;
+        padding: 15vh 8vw;
+    }
 }
