--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,4 @@
-#background-video {
 
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
-    object-fit: cover;
-
-}
 body {
     background-image: url('images/Screenshot\ 2026-01-10\ 232458.png');
     background-size: cover;
@@ -39,7 +29,10 @@ body {
 }
 
 .Presidents-and-VP {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 @media (max-width: 750px) {
