--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     background-image: url('images/Screenshot\ 2026-01-10\ 232458.png');
     background-size: cover;
-    background-position: center;
+    background-position: left;
     background-attachment: fixed;
 }
 
