--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('images/Screenshot\ 2026-01-10\ 232458.png');
+    background-image: url('./images/Screenshot\ 2026-01-10\ 232458.png');
     background-size: cover;
     background-position: left;
     background-attachment: fixed;
