--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
 
-body {
-    background-image: url('images/GiggaChad.png');
-    background-size: contain;
-    background-position: center;
-    background-attachment: scroll;
-}
+
 
 .In-Your-Face-content {
     position: relative;
@@ -42,6 +37,14 @@ body {
     align-items: center;
     height: 100vh;
 }
+
+.Presidents-and-VP-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 
 @media (max-width: 750px) {
     .In-Your-Face-content {
