--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-        background-image: url("./Images/GiggaChad.png");
+        background-image: url("./Images/Thomas202888.png");
         background-size: contain;
         background-position: center;
         background-attachment: scroll;
