--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,12 @@ body {
     height: 100vh;
 }
 
+.Presidents-and-VP-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
 @media (max-width: 750px) {
     .In-Your-Face-content {
