--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,29 @@ body {
         z-index: -1;
     }
 
+.topnav {
+    background-color: #d3ad65;
+    overflow: hidden;
+    font-family:  'Trebuchet MS';
+    text-align: center;
+
+}
+
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D; 
+    color: white;
+}
 
 .In-Your-Face-content {
     position: relative;
